fix for shop on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ section#buy {
 section#buy a {
   color: inherit;
   text-decoration: none;
+  bottom : -10px;
 }
 
 .margin-top {
